<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/classes_card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="25dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/classes_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_blue">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_image_class"
            android:layout_width="@dimen/layout_size_card_image"
            android:layout_height="@dimen/layout_size_card_image"
            android:layout_margin="@dimen/margin_card_image"
            android:backgroundTint="@color/grey_blue_light"
            app:cardCornerRadius="19dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/card_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_image"
                tools:ignore="ContentDescription"
                tools:srcCompat="@drawable/ic_bow" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_classes"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/watch_decryption"
            app:layout_constraintStart_toEndOf="@+id/card_image_class"
            app:layout_constraintTop_toTopOf="@+id/card_image_class" />

        <TextView
            android:id="@+id/watch_decryption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_classes"
            android:layout_marginTop="@dimen/watch_margin_text"
            android:gravity="center"
            android:text="@string/text_watch"
            android:textColor="@color/color_text_watch"
            android:textSize="@dimen/text_size_watch"
            app:layout_constraintBottom_toBottomOf="@+id/card_image_class"
            app:layout_constraintStart_toEndOf="@+id/card_image_class"
            app:layout_constraintTop_toBottomOf="@+id/title_class" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/blue_view"
            android:layout_width="@dimen/wight_skype"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="gone"
            android:clickable="true"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="@color/blue_light"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_blue_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_big_standard"
                    android:gravity="center"
                    android:rotation="90"
                    android:singleLine="true"
                    android:text="@string/open_in"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_watch"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintBottom_toTopOf="@id/blue_view_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/blue_view_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_little_standard"
                    android:rotation="90"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/text_blue_view"
                    app:layout_constraintStart_toStartOf="@+id/text_blue_view"
                    app:layout_constraintTop_toBottomOf="@+id/text_blue_view"
                    android:src="@drawable/ic_camera_size_similar" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
