<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homework_card"
    android:layout_width="@dimen/width_element_homework"
    android:layout_height="@dimen/height_element_homework"
    android:layout_marginEnd="@dimen/margin_little_standard"
    android:clickable="true"
    app:cardCornerRadius="25dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_blue">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_image_homework"
            android:layout_width="@dimen/layout_size_card_image"
            android:layout_height="@dimen/layout_size_card_image"
            android:layout_margin="@dimen/margin_card_image"
            app:cardElevation="0dp"
            android:backgroundTint="@color/grey_blue_light"
            app:cardCornerRadius="19dp"
            app:layout_constraintBottom_toTopOf="@+id/explanation_homework"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_homework"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_image"
                tools:ignore="ContentDescription"
                tools:srcCompat="@drawable/ic_literature" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title_homework"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_image"
            android:text="@string/literature"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/watch_homework"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/card_image_homework" />

        <TextView
            android:id="@+id/watch_homework"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_image"
            android:gravity="center"
            android:text="@string/days_left"
            android:textColor="@color/red_chery"
            android:textSize="@dimen/text_size_watch"
            app:layout_constraintBottom_toBottomOf="@+id/card_image_homework"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_homework" />


        <TextView
            android:id="@+id/explanation_homework"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_image"
            android:layout_marginEnd="@dimen/margin_card_image"
            android:text="@string/read_scenes_1_1_1_12_of_the_master_and_margarita"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_watch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintBottom_toTopOf="@+id/user_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/watch_homework" />

        <FrameLayout
            android:id="@+id/user_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_image"
            android:layout_marginEnd="@dimen/margin_card_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/explanation_homework">

            <ImageView
                android:id="@+id/user_image_1"
                android:layout_width="@dimen/layout_image"
                android:layout_height="@dimen/layout_image"
                android:scaleType="fitStart"
                android:padding="3dp"
                android:background="@drawable/h_w_background"
                tools:ignore="ContentDescription"
                tools:srcCompat="@drawable/user_1" />

            <ImageView
                android:id="@+id/user_image_2"
                android:layout_width="@dimen/layout_image"
                android:layout_height="@dimen/layout_image"
                android:layout_marginStart="32dp"
                android:scaleType="fitStart"
                android:padding="3dp"
                android:background="@drawable/h_w_background"
                tools:ignore="ContentDescription"
                tools:srcCompat="@drawable/user_2" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
