<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_navigation_background">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="@dimen/radius_background_icon_menu"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/classes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_color_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/dark_green_gradient_background"
            android:paddingStart="@dimen/padding_top_bottom_menu"
            android:paddingTop="@dimen/padding_start_end_menu"
            android:paddingEnd="@dimen/padding_top_bottom_menu"
            android:paddingBottom="@dimen/padding_start_end_menu">

            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="@dimen/menu_icon_size"
                android:layout_height="@dimen/menu_icon_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/title_home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_home"
                app:tint="@color/green" />

            <TextView
                android:id="@+id/title_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_navigation"
                android:paddingStart="@dimen/margin_little_standard"
                android:text="@string/home"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_home"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/classes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="@dimen/radius_background_icon_menu"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/list"
        app:layout_constraintStart_toEndOf="@id/home"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_color_classes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:paddingStart="@dimen/padding_top_bottom_menu"
            android:paddingTop="@dimen/padding_start_end_menu"
            android:paddingEnd="@dimen/padding_top_bottom_menu"
            android:paddingBottom="@dimen/padding_start_end_menu">

            <ImageView
                android:id="@+id/icon_classes"
                android:layout_width="@dimen/menu_icon_size"
                android:layout_height="@dimen/menu_icon_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/title_classes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_classes"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/title_classes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_navigation"
                android:paddingStart="@dimen/margin_little_standard"
                android:text="@string/classes"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_classes"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="@dimen/radius_background_icon_menu"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/favourite"
        app:layout_constraintStart_toEndOf="@id/classes"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_color_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:paddingStart="@dimen/padding_top_bottom_menu"
            android:paddingTop="@dimen/padding_start_end_menu"
            android:paddingEnd="@dimen/padding_top_bottom_menu"
            android:paddingBottom="@dimen/padding_start_end_menu">

            <ImageView
                android:id="@+id/icon_list"
                android:layout_width="@dimen/menu_icon_size"
                android:layout_height="@dimen/menu_icon_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/title_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_home_work"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/title_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_navigation"
                android:paddingStart="@dimen/margin_little_standard"
                android:text="@string/home_work"
                android:textColor="@color/green"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_list"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="@dimen/radius_background_icon_menu"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/list"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_color_favourite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:paddingStart="@dimen/padding_top_bottom_menu"
            android:paddingTop="@dimen/padding_start_end_menu"
            android:paddingEnd="@dimen/padding_top_bottom_menu"
            android:paddingBottom="@dimen/padding_start_end_menu">

            <ImageView
                android:id="@+id/icon_favourite"
                android:layout_width="@dimen/menu_icon_size"
                android:layout_height="@dimen/menu_icon_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/title_favourite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_star"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/title_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_navigation"
                android:paddingStart="@dimen/margin_little_standard"
                android:text="@string/favorite"
                android:textColor="@color/green"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_favourite"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
